Updated the UI and Make the functionality of the repo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <title>Etch-A-Sketch Game</title>
 </head>
 <body>
-    
+    <div class="header"><h2>Etch-A-Sketch</h2></div>
+    <div class="btn"><button class="button">Resize</button></div>
+    <div class="container"></div>
+
+
+    <script src="./javascript/script.js"></script>
 </body>
 </html>
